--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -12,14 +12,36 @@ html{
 }
 
 body{
-  background: var(--color-page-bg);
+  //background: #f0f3f8;
+  background: #f9fff9;
   font-family: Roboto, serif;
   font-weight: 300;
   font-size: 14px;
   color: #212121;
   line-height: 1.4;
+  .bg-overlay {
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.2);
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+  }
 }
 
+.bg-facebook{
+  background: #43609c;
+}
+
+.card{
+
+  box-shadow: 0px 9px 14px 9px rgb(149 149 149 / 5%), -1px 1px 18px -15px rgb(77 179 75 / 45%), 0 14px 20px 0px rgb(226 255 226 / 60%)
+  //box-shadow: 0px 9px 14px 9px rgb(149 149 149 / 5%), 0 3px 15px 2px rgb(156 217 156 / 32%), 0 14px 20px 0px rgb(204 251 204 / 32%)
+}
 
 h1, h2, h3, h4, h5, h6{
   margin: 0;
@@ -27,6 +49,11 @@ h1, h2, h3, h4, h5, h6{
   
 }
 img{ font-size: 12px}
+
+.text-link{
+  @apply text-neutral-400 hover:text-green-500 cursor-pointer;
+}
+
 
 .App-Content{
   position: relative;
