--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -7,6 +7,12 @@ html{
   -webkit-tap-highlight-color: transparent;
 }
 
+.dark{
+  body{
+    background: #161616;
+    //@apply bg-neutral-900;
+  }
+}
 body{
   //background: #f0f3f8;
   background: #f9fff9;
@@ -15,6 +21,7 @@ body{
   font-size: 14px;
   color: #212121;
   line-height: 1.4;
+
   .bg-overlay {
     height: 100vh;
     width: 100vw;
