--- a/client/src/components/UI/Button/Button.scss
+++ b/client/src/components/UI/Button/Button.scss
@@ -1,17 +1,20 @@
 
 .btn{
   box-sizing: border-box;
-  background: var(--color-primary);
   outline:none;
   border:none;
   padding: 5px 10px;
   cursor: pointer;
   font-weight: 500;
   margin: 5px;
-  display: block;
+  display: flex;
+  align-items: center;
   width: max-content;
   text-decoration: none !important;
   -webkit-tap-highlight-color: transparent;
+
+  //@apply bg-green-450;
+
   a{
     color: inherit;
     text-decoration: none;
@@ -77,16 +80,9 @@
   &:hover{
     color: red;
   }
-  
 }
-.btn-icon{
-  display: flex;
-  align-items: center;
-}
-.btn-icon-i,
-.loading-circle{
-  // margin-right: 5px;;
-}
+
+
 .btn-disable{
   background: darken(#8ab5ffa5, 10%);
   cursor: none;
@@ -96,19 +92,25 @@
   }
 }
 
-.loading-circle{
-  width: 10px;
-  height: 10px;
+.btn-loading-circle{
+  width: 20px;
+  height: 20px;
   border: 3px solid transparent;
-  border-bottom-color: white;
-  border-left-color: white;
+  border-bottom-color: #3f3f3f;
+
+  border-top-color: transparent!important;
+  border-right-color: transparent!important;
+
+  border-left-color: #3f3f3f;
+
   border-radius: 100%;
   animation: spin .5s linear infinite;
+}
+.dark .btn-loading-circle{
+  border-bottom-color: white;
+  border-left-color: white;
 }
 @keyframes spin{
   0%{transform: rotate(0deg)}
   100%{transform: rotate(360deg)}
 }
-
-.btn-orange{color: white; background: var(--color-brand-orange)}
-.btn-yellow{color: white; background: var(--color-primary-yellow)}
