--- a/client/src/components/Navigation/Navigation.scss
+++ b/client/src/components/Navigation/Navigation.scss
@@ -72,6 +72,11 @@ body{
       }
     i{ color: red}
 }
+
+.dark .nav_fixed{
+  box-shadow: 0 1px 20px 9px #1c1c1c;
+}
+
 .nav_fixed{
   box-shadow: $shadow-d1;
 }
