--- a/client/src/components/UI/Popup/Popup.scss
+++ b/client/src/components/UI/Popup/Popup.scss
@@ -1,9 +1,13 @@
+.dark .popup{
+  box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.69) !important;
+}
 .popup{
-  box-shadow: 0 2px 5px 1px #b5b3b3b0;
+  box-shadow: 0 2px 14px -4px #88978b;
   /* padding: 10px; */
   /* margin: 10px; */
   min-width: max-content;
   display: block;
+  position: absolute;
 }
 
 
