--- a/client/src/components/UI/Menu/Menu.scss
+++ b/client/src/components/UI/Menu/Menu.scss
@@ -82,64 +82,71 @@
 //    /* margin-right: 5px; */
 //    /* margin-left: 10px; */
 //  }
-//  .sub_menu{
-//    box-sizing: border-box;
-//    //padding-left: 10px !important;
-//    margin-top: 0px;
-//    color: green;
-//    transition: all 1s ease;
-//    .sub_menu_animation{
-//      height: 0;
-//      overflow: hidden;
-//      transition: all .5s ease;
-//    }
-//    .sub_menu_animation__expand{
-//
-//    }
-//    .sub_menu_animation__collapse{
-//
-//    }
-//
-//    &.inline-mode--sub_menu{
-//      position: absolute;
-//      background: #ffffff;
-//      top: 0;
-//      width: max-content;
-//      left: 38px;
-//      padding: 10px 10px !important;
-//      box-shadow: 0 2px 4px rgb(15 34 58 / 12%);
-//      .menu_item{
-//        margin: 0px 0;
-//        padding: 10px 8px 10px 8px;
-//      }
-//    }
-//    .menu_item{
-//      padding: 10px 8px 10px 30px;
-//      display: flex;
-//      align-items: center;
-//      justify-content: space-between;
-//        &:hover{
-//          background: rgb(218 218 218 / 58%);
-//          //background: rgba(208, 255, 210, 0.73);
-//          transition: background-color 1s ease;
-//        }
-//
-//    }
-//    .no-sub{
-//      margin: 0px 0;
-//      padding: 0;
-//      .item{
-//        width: 100%;
-//        padding: 10px 8px 10px 30px;
-//      }
-//      &:hover{
-//        background: none;
-//        //background: rgba(208, 255, 210, 0.73);
-//        //transition: background-color 1s ease;
-//      }
-//    }
-//  }
-//
+
+
+  .sub-menu-item__expanded{
+    background: red;
+    color: white;
+  }
+
+  .sub_menu{
+    box-sizing: border-box;
+    //padding-left: 10px !important;
+    margin-top: 0;
+    color: green;
+    transition: all 1s ease;
+    .sub_menu_animation{
+      height: 0;
+      overflow: hidden;
+      transition: all .5s ease;
+    }
+    .sub_menu_animation__expand{
+
+    }
+    .sub_menu_animation__collapse{
+    }
+
+    //&.inline-mode--sub_menu{
+    //  position: absolute;
+    //  background: #ffffff;
+    //  top: 0;
+    //  width: max-content;
+    //  left: 38px;
+    //  padding: 10px 10px !important;
+    //  box-shadow: 0 2px 4px rgb(15 34 58 / 12%);
+    //  .menu_item{
+    //    margin: 0px 0;
+    //    padding: 10px 8px 10px 8px;
+    //  }
+    //}
+
+    //.menu_item{
+    //  padding: 10px 8px 10px 30px;
+    //  display: flex;
+    //  align-items: center;
+    //  justify-content: space-between;
+    //    &:hover{
+    //      background: rgb(218 218 218 / 58%);
+    //      //background: rgba(208, 255, 210, 0.73);
+    //      transition: background-color 1s ease;
+    //    }
+    //
+    //}
+    //.no-sub{
+    //  margin: 0px 0;
+    //  padding: 0;
+    //  .item{
+    //    width: 100%;
+    //    padding: 10px 8px 10px 30px;
+    //  }
+    //  &:hover{
+    //    background: none;
+    //    //background: rgba(208, 255, 210, 0.73);
+    //    //transition: background-color 1s ease;
+    //  }
+    //}
+  }
+
 //  .icon-right{
 //    color: #9e9e9e;
 //    font-weight: 400;
