--- a/client/src/pages/Customer/Dashboard.scss
+++ b/client/src/pages/Customer/Dashboard.scss
@@ -1,16 +1,18 @@
 
 
-.r{
-  display: flex; 
-  width: 100%;
+
   .sidebar{
-    min-width: 300px;
-    background: #f1f1f1;
+    width: 300px;
+    height: 100vh;
+    //background: #f1f1f1;
   }
   .content{
-    background: white;
+    //background: white;
     width: 100%;
     height: 100vh;
     overflow-y: auto;
   }
-}
+
+  .menu-item{
+    @apply flex gap-x-2 items-center text-neutral-700 dark:text-neutral-300 font-normal hover:bg-green-300/20 p-2 cursor-pointer
+  }
