--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,7 +1,9 @@
 @import "styles/--colors.scss";
 @import "styles/--variable.scss";
 
-
+:root{
+  --header-height: 97px
+}
 
 html{
   -webkit-tap-highlight-color: transparent;
@@ -34,6 +36,9 @@ body{
     -webkit-transition: 0.5s;
     transition: 0.5s;
   }
+}
+.header_space{
+  height: var(--header-height);
 }
 
 .bg-facebook{
@@ -400,7 +405,7 @@ h1, h2, h3, h4,h5,h6, ul, li, p{
     padding: 0px;
     font-size: 20px;
     text-align: start;
-    font-weight: 50s0;
+    font-weight: 500;
   }
   &__causes{
     font-size: 13px;
@@ -409,5 +414,20 @@ h1, h2, h3, h4,h5,h6, ul, li, p{
     li{
     
     }
+  }
+}
+
+.custom_scrollbar{
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  &::-webkit-scrollbar-track {
+    //box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(211, 211, 211, 0.46);
+    //outline: 1px solid slategrey;
   }
 }
