--- a/client/src/pages/Customer/Dashboard.scss
+++ b/client/src/pages/Customer/Dashboard.scss
@@ -1,20 +1,41 @@
+@import "src/styles/--breakpoint";
+ .sidebar{
+    color: #2f2f2f;
+    position: sticky;
+    top: var(--header-height);
+    bottom: 0;
+    height: 100%;
+    transition: width .3s ease;
+   box-shadow: 2px 0 9px -3px #2c2c2ca1;
 
-
-  .sidebar{
-    width: 300px;
-    height: 100vh;
-    //background: #f1f1f1;
-    position: fixed;
+   @include get_down(800px){
+     position: relative;
+     top: auto;
+     .sidebar_content{
+       overflow: visible;
+       height: 100%;
+       //width: 300px;
+       //overflow-y: auto;
+       //height: calc(100vh - var(--header-height));
+     }
+   }
 
     &.inline-mode{
-      width: 50px;
+      .sidebar_content{
+        width: 60px;
+      }
+    }
+
+    &_content{
+      width: 300px;
+      overflow-y: auto;
+      height: calc(100vh - var(--header-height));
     }
   }
+
+
   .content{
-    //background: white;
-    width: 100%;
-    height: 100vh;
-    overflow-y: auto;
+
   }
 
   .menu-item{
