--- a/client/src/pages/productFilterPage/productFilterPage.scss
+++ b/client/src/pages/productFilterPage/productFilterPage.scss
@@ -56,14 +56,14 @@
   }
   .content{
     /* padding: 0 5px; */
-    margin: 0;
-    padding: 0;
-    /* background: grey; */
-    background: white;
-    box-shadow: $shadow-3;
-    width: 100%;
-    height: 100vh;
-    overflow-y: auto;
+    //margin: 0;
+    //padding: 0;
+    ///* background: grey; */
+    //background: white;
+    //box-shadow: $shadow-3;
+    //width: 100%;
+    //height: 100vh;
+    //overflow-y: auto;
   }
   .content-container{
     padding-left: 10px;
