--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -431,3 +431,11 @@ h1, h2, h3, h4,h5,h6, ul, li, p{
     //outline: 1px solid slategrey;
   }
 }
+
+table{
+  padding: 20px;
+}
+table td {
+  padding: 0;
+  margin: 0;
+}
