--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -46,10 +46,17 @@ body{
 }
 
 .card{
+  //box-shadow: 0px 9px 14px 9px rgb(149 149 149 / 5%), -1px 1px 18px -15px rgb(77 179 75 / 45%), 0 14px 20px 0px rgb(226 255 226 / 60%);
 
-  box-shadow: 0px 9px 14px 9px rgb(149 149 149 / 5%), -1px 1px 18px -15px rgb(77 179 75 / 45%), 0 14px 20px 0px rgb(226 255 226 / 60%)
+  box-shadow: 0px 9px 14px 9px rgb(149 149 149 / 5%), -1px 1px 18px -15px rgb(48 48 48), 0 14px 20px 0px rgb(223 223 223 / 33%);
+  background: white;
+  border-radius: 10px;
+  padding: 1rem;
+  margin: 1rem;
   //box-shadow: 0px 9px 14px 9px rgb(149 149 149 / 5%), 0 3px 15px 2px rgb(156 217 156 / 32%), 0 14px 20px 0px rgb(204 251 204 / 32%)
 }
+
+
 
 h1, h2, h3, h4, h5, h6{
   margin: 0;
