--- a/client/src/components/UI/Button/Button.scss
+++ b/client/src/components/UI/Button/Button.scss
@@ -3,9 +3,10 @@
   box-sizing: border-box;
   outline:none;
   border:none;
-  padding: 5px 10px;
+  padding: 10.5px 14px;
   cursor: pointer;
   font-weight: 500;
+  color: white;
   display: flex;
   align-items: center;
   width: max-content;
