added single product component for filterpage render product

--- a/client/src/components/UI/tooltip/tooltip.scss
+++ b/client/src/components/UI/tooltip/tooltip.scss
@@ -4,7 +4,8 @@
   }
   .tips{
     //opacity: 0;
-    padding: 5px 10px;  
+    padding: 5px 10px;
+    display: inline-block;
     color: white;
     z-index: 1000;
     background: #423f3f;
