--- a/client/src/components/UI/Badge/Badge.scss
+++ b/client/src/components/UI/Badge/Badge.scss
@@ -1,10 +1,14 @@
 .badge{
-  /* color: red; */
-  padding: 5px 8px;
-  min-width: 10px;
-  height: 10px;
   display: inline-block;
   text-align: center;
-  line-height: 10px;
-  font-size: 12px;
+  position: absolute;
+  border-radius: 100%;
+  line-height: 0.8;
+  left: 13px;
+  top: 6px;
+  background: #f15b5b;
+  color: white;
+  font-size: 10px;
+  font-weight: 500;
+  padding: 5px;
 }
