--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -97,61 +97,16 @@ img{ font-size: 12px}
   }
 };
 
-//
-//.mx-5{margin-left: 10px;margin-right: 10px;}
-//.my-5{margin-bottom: 10px;margin-top: 10px;}
-//.mt-5{margin-top: 10px;}
-//.mb-5{margin-bottom: 10px;}
-//.ml-5{margin-left: 20px;}
-//.ml-4{margin-left: 15px;}
-//.ml-2{margin-left: 4px;}
-//.mr-5{margin-right: 20px;}
-//
-//.mx-3{margin-left: 10px;margin-right: 10px;}
-//.my-5{margin-bottom: 10px;margin-top: 10px;}
-//.mt-5{margin-top: 20px;}
-//.mt-3{margin-top: 10px;}
-//.mb-5{margin-bottom: 10px;}
-//.ml-3{margin-left: 6px;}
-//.mr-5{margin-right: 10px;}
-//.p-5{padding: 20px;}
-//.px-5{padding-left: 20px;padding-right: 20px;}
-//.py-5{padding-bottom: 10px;padding-top: 10px;}
-//.pt-5{padding-top: 10px;}
-//.pb-5{padding-bottom: 10px;}
-//.pl-5{padding-left: 10px;}
-//.pl-1{padding-left: 2px !important;}
-//.ml-0{margin-left: 0 !important}
-//.pr-5{padding-right: 10px;}
 
 .bg-transparent{background: transparent !important }
 .bg-primary{background: $primary;}
 .bg-secondary{background: $secondary;}
 .bg-danger{background: $danger;}
-.text-dark-A400{color: $dark-A400}
-.text-light-A400{color: $light-A400}
-//.br-2{border-radius: 2px;}
-//.br-3{border-radius: 3px;}
-//.br-4{border-radius: 4px;}
-//.br-5{border-radius: 5px;}
-//.br-100{border-radius: 100px;}
-.event-none{ pointer-events: none;}
-//.container{
-//    max-width: 1688px;
-//    margin: auto;
-//    padding-left: 15px;
-//    padding-right: 15px;
-//}
 
 .right{
   margin-left: auto !important; 
   display: block;
 }
-//.flex-column{flex-direction: column; }
-//.flex-row{flex-direction: row; }
-//.justify-space-between{ justify-content: space-between; }
-//.justify-center{ justify-content: center; }
-//.align-center{ align-items:  center; }
 
 .text-image{
     display: flex;
@@ -170,18 +125,6 @@ img{ font-size: 12px}
   right: 0;
   top: 0;
 }
-//.p-relative{ position: relative; }
-//.p-absolute{ position: absolute; }
-//.d-flex{ display: flex}
-//.d-iblock{ display: inline-block }
-//.d-block{ display: block }
-//.justify-space-between{
-//    display: flex;
-//    justify-content: space-between;
-//}
-//.flex-direction-column{
-//    flex-direction: column;
-//}
 
 .console_root{
   /* width: 100%; */
@@ -194,10 +137,6 @@ img{ font-size: 12px}
    margin: 20px;
    box-sizing: border-box;
 }
-//
-//.t-center{text-align: center;}
-//.t-start{text-align: start;}
-//.t-end{text-align: end;}
 
 table{
   width: 100%;
@@ -227,15 +166,6 @@ i:hover{
   }
 }
 
-//.block{
-//  background: #9292ff;
-//  color: white;
-//  margin: 5px;
-//  padding:  5px;
-//  border-radius: 3px;
-//  white-space: nowrap;
-//  box-sizing: border-box;
-//}
 
 table{
   border: none;
@@ -244,9 +174,6 @@ tr{
   &:nth-child(odd){
     //background: #ccffcc;
   }
-  //display: flex;
- // justify-content: space-between;
- // align-items: center;
 }
 
 td{
@@ -318,36 +245,7 @@ h1, h2, h3, h4,h5,h6, ul, li, p{
   padding: 0;
 }
 
-//.m-0{margin: 0}
-//.p-0{padding: 0}
-//.m-2{margin: 5px}
-//.m-3{margin: 10px}
-//.mt-2{margin-top: 4px};
-//.mb-2{margin-bottom: 4px};
-//.mr-40{margin-right: 40px}
-//.mr-4{margin-right: 16px}
-//.mr-2{margin-right: 4px}
-//.ml-1{margin-left: 2px;}
-//.ml-2{margin-left: 4px;}
-//.ml-5{margin-left: 20px;}
-//.mt-5{margin-top: 20px;}
-//.mb-2{margin-bottom: 4px;}
-//.mb-3{margin-bottom: 10px;}
-//.p-5{padding: 20px}
-//.pt-5{padding-top: 20px}
-//.pl-5{padding-left: 20px}
-//.pr-5{padding-right: 20px}
-//.pb-5{padding-bottom: 20px}
-//.p-3{padding: 10px}
-//.mt-2{padding: 4px}
-//.m-auto{margin: auto}
 
-//.align-center{align-items: center;}
-//.align-start{align-items: flex-start;}
-//.justify-center{justify-content: center;}
-//.justify-space-between{justify-content: space-between;}
-//.justify-content-end{justify-content: flex-end}
-//.flex-column{ flex-direction: column;}
 
 // shared styles.............
 .off-div{
@@ -445,4 +343,54 @@ table{
 table td {
   padding: 0;
   margin: 0;
+}
+
+.backdrop{
+  pointer-events: none;
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  opacity: 0;
+  z-index: 999;
+  background-color: rgba(37, 37, 37, 0.66);
+  transition-duration: .2s;
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+  transition-property: transform, opacity;
+  overflow-y: hidden;
+  overscroll-behavior: contain;
+  &--show{
+    opacity: 1;
+    visibility: visible;
+    overflow: auto;
+  }
+}
+
+.modal-box{
+    max-height: calc(100vh - 5em);
+    --tw-bg-opacity: 1;
+    background-color: white;
+    padding: 1.5rem;
+    transition-property: color,background-color,border-color,fill,stroke,opacity,box-shadow,transform,filter,-webkit-text-decoration-color,-webkit-backdrop-filter;
+    transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
+    transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter,-webkit-text-decoration-color,-webkit-backdrop-filter;
+    transition-duration: .2s;
+    transition-timing-function: cubic-bezier(.4,0,.2,1);
+    width: 91.666667%;
+    max-width: 32rem;
+    --tw-scale-x: .9;
+    --tw-scale-y: .9;
+    transform: translate(var(--tw-translate-x),var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    border-top-left-radius: var(--rounded-box,1rem);
+    border-top-right-radius: var(--rounded-box,1rem);
+    border-bottom-left-radius: var(--rounded-box,1rem);
+    border-bottom-right-radius: var(--rounded-box,1rem);
+    box-shadow: 0 25px 50px -12px #00000040;
+    overflow-y: auto;
+    overscroll-behavior: contain;
+
 }
