--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -45,6 +45,12 @@ body{
   background: #43609c;
 }
 
+.dark .card{
+  background: #2a2a2a;
+  box-shadow: 0px 9px 14px 9px rgba(42, 42, 42, 0.3), -1px 1px 18px -15px rgba(52, 52, 52, 0.45), 0 14px 20px 0px rgba(35, 35, 35, 0.81);
+  color: white;
+}
+
 .card{
   //box-shadow: 0px 9px 14px 9px rgb(149 149 149 / 5%), -1px 1px 18px -15px rgb(77 179 75 / 45%), 0 14px 20px 0px rgb(226 255 226 / 60%);
 
@@ -273,11 +279,12 @@ h1, h2, h3, h4,h5,h6, ul, li, p{
   margin: 0;
   color: var(--gray-9);
 }
-.title{
-  font-size: 16px;
-  margin: 0;
-  color: var(--gray-9);
-}
+
+.h1{@apply dark:text-white text-neutral-900 font-medium text-3xl}
+.h2{@apply dark:text-white text-neutral-900 font-medium text-xl}
+.h3{@apply dark:text-white text-neutral-900 font-medium text-lg}
+.p{@apply dark:text-neutral-200 text-neutral-500  }
+
 .text-grey{color: #7d7d7d}
 .text-primary{color: var(--color-primary);}
 .bg-primary{background: var(--color-primary);}
@@ -357,7 +364,7 @@ table td {
   justify-content: center;
   opacity: 0;
   z-index: 999;
-  background-color: rgba(37, 37, 37, 0.66);
+  background-color: rgba(38, 38, 38, 0.88);
   transition-duration: .2s;
   transition-timing-function: cubic-bezier(.4,0,.2,1);
   transition-property: transform, opacity;
@@ -367,9 +374,16 @@ table td {
     opacity: 1;
     visibility: visible;
     overflow: auto;
+    .modal-box{
+      pointer-events: auto;
+    }
   }
 }
-
+.dark{
+  .modal-box{
+    background-color: #262626;
+  }
+}
 .modal-box{
     max-height: calc(100vh - 5em);
     --tw-bg-opacity: 1;
@@ -392,5 +406,10 @@ table td {
     box-shadow: 0 25px 50px -12px #00000040;
     overflow-y: auto;
     overscroll-behavior: contain;
+}
 
+.block-page{
+  overflow: hidden;
+  pointer-events: none;
+  user-select: none;
 }
