--- a/client/src/components/UI/Spin/Spin.scss
+++ b/client/src/components/UI/Spin/Spin.scss
@@ -17,18 +17,13 @@
     display: inline-block;
     height: 100%;
     border: 5px solid transparent;
-    border-right-color: red;
+    border-right-color: #26da2c;
     border-radius: 100%;
-    animation: loader 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    &:nth-child(1){ animation-delay: -0.45s; }
-    &:nth-child(2){ animation-delay: -0.3s; }
-    &:nth-child(3){ animation-delay: -0.15s; }
-    &:nth-child(4){ animation-delay: -0.10s; }
-  }
-}
-.loader-primary{
-  .loader_circle{
-    border-right-color: var(--color-primary);
+    animation: loader .8s cubic-bezier(0.5, 0, 0.5, .3) infinite;
+    &:nth-child(1){ animation-delay: -0.25s; }
+    &:nth-child(2){ animation-delay: -0.1s; }
+    &:nth-child(3){ animation-delay: -0.1s; }
+    &:nth-child(4){ animation-delay: -0.2s; }
   }
 }
 
