--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,5 +1,6 @@
 @import "styles/--colors.scss";
 @import "styles/--variable.scss";
+@import "styles/--breakpoint";
 
 :root{
   --header-height: 97px
@@ -412,4 +413,88 @@ table td {
   overflow: hidden;
   pointer-events: none;
   user-select: none;
+}
+
+
+
+/******* dashboard sidebar **************/
+.dashboard-container {
+
+  @include get_down(1910px){
+    max-width: 1400px;
+    margin: auto;
+  }
+
+  @include get_up(1921px){
+    max-width: 1400px;
+    margin: auto;
+  }
+
+  .sidebar {
+    color: #2f2f2f;
+    position: sticky;
+    top: var(--header-height);
+    bottom: 0;
+    height: 100%;
+    transition: width .3s ease;
+    box-shadow: 2px 0 9px -3px #2c2c2ca1;
+
+    @include get_down(800px) {
+      position: relative;
+      top: auto;
+      .sidebar_content {
+        overflow: visible;
+        height: 100%;
+        //width: 300px;
+        //overflow-y: auto;
+        //height: calc(100vh - var(--header-height));
+      }
+    }
+
+    &.inline-mode {
+      .sidebar_content {
+        width: 60px;
+      }
+    }
+
+    &_content {
+      width: 300px;
+      overflow-y: auto;
+      height: calc(100vh - var(--header-height));
+    }
+  }
+
+
+  .content {
+
+  }
+
+  .menu-item {
+    @apply flex gap-x-2 items-center text-neutral-700 dark:text-neutral-300 font-normal hover:bg-green-300/20 p-2 cursor-pointer
+  }
+
+  .menu-item_inline {
+    cursor: pointer;
+
+    .menu-item-tooltip {
+      display: none;
+    }
+
+    .menu-item-icon:hover ~ .menu-item-tooltip {
+      display: block;
+    }
+
+
+    // nested sub menu
+
+    .menu-item-tooltip-sub {
+      display: none;
+    }
+
+    .menu-item-icon-sub:hover ~ .menu-item-tooltip-sub {
+      display: block;
+    }
+
+  }
+
 }
