--- a/client/src/components/UI/table/style.css
+++ b/client/src/components/UI/table/style.css
@@ -1,3 +1,38 @@
 table tr th{
     text-align: start;
 }
+
+
+.table-fixed {
+    width: 100%;
+}
+
+.table-fixed table {
+     width: 100%;
+}
+
+.table-fixed thead,
+.table-fixed tbody tr {
+    display: table;
+    width: 100%;
+    table-layout: fixed;
+}
+
+.table-fixed tbody {
+    display: block;
+    overflow-y: auto;
+    table-layout: fixed;
+    max-height: 200px;
+}
+.table-fixed thead  {
+    margin-left : 0;
+}
+.table-fixed tbody::-webkit-scrollbar {
+    width: 4px;
+}
+.table-fixed tbody::-webkit-scrollbar-track {
+    background: rgba(194, 194, 194, 0.11);
+}
+.table-fixed tbody::-webkit-scrollbar-thumb {
+    background: rgba(66, 206, 114, 0.67);
+}
