added Brand Model and clean brand controller

--- a/client/src/components/UI/Menu/Menu.scss
+++ b/client/src/components/UI/Menu/Menu.scss
@@ -5,6 +5,9 @@
   &:hover{
     background: rgb(12, 199, 78) !important;
   }
+  a{
+    color: white !important;
+  }
 }
 
 //.sub-menu-item__expanded {
