--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -59,7 +59,7 @@ body{
   background: white;
   border-radius: 10px;
   padding: 1rem;
-  margin: 1rem;
+  margin: 1rem 0;
   //box-shadow: 0px 9px 14px 9px rgb(149 149 149 / 5%), 0 3px 15px 2px rgb(156 217 156 / 32%), 0 14px 20px 0px rgb(204 251 204 / 32%)
 }
 
@@ -284,6 +284,7 @@ h1, h2, h3, h4,h5,h6, ul, li, p{
 .h1{@apply dark:text-white text-neutral-900 font-medium text-3xl}
 .h2{@apply dark:text-white text-neutral-900 font-medium text-xl}
 .h3{@apply dark:text-white text-neutral-900 font-medium text-lg}
+.h4{@apply dark:text-white text-neutral-900 font-medium text-sm}
 .p{@apply dark:text-neutral-200 text-neutral-500  }
 
 .text-grey{color: #7d7d7d}
