--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -63,6 +63,10 @@ body{
   //box-shadow: 0px 9px 14px 9px rgb(149 149 149 / 5%), 0 3px 15px 2px rgb(156 217 156 / 32%), 0 14px 20px 0px rgb(204 251 204 / 32%)
 }
 
+.center_in_div > div{
+    display: flex;
+    justify-content: center;
+}
 
 
 h1, h2, h3, h4, h5, h6{
