update client side complex category system v2

--- a/client/src/pages/productFilterPage/productFilterPage.scss
+++ b/client/src/pages/productFilterPage/productFilterPage.scss
@@ -238,3 +238,8 @@
   font-weight: 500 !important;
   color: #1c1c1c !important;
 }
+
+.expanded-category{
+    color: red;
+    font-weight: 600;
+}
