--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -19,7 +19,7 @@ html{
 body{
   //background: #f0f3f8;
   background: #f9fff9;
-  font-family: Roboto, serif;
+  font-family: Roboto, serif !important;
   font-weight: 300;
   font-size: 14px;
   color: #212121;
