--- a/client/src/pages/productFilterPage/productFilterPage.scss
+++ b/client/src/pages/productFilterPage/productFilterPage.scss
@@ -240,6 +240,10 @@
 }
 
 .expanded-category{
-    color: red;
-    font-weight: 600;
+    color: #505050;
+    font-weight: 400;
+}
+.last-expand-category{
+    font-weight: bold;
+    color: #0e0e0e;
 }
