--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -52,6 +52,10 @@ body{
   color: white;
 }
 
+.bg-body{
+    @apply bg-white dark:bg-neutral-800 shadow-card-deep dark:shadow-md
+}
+
 .card{
   //box-shadow: 0px 9px 14px 9px rgb(149 149 149 / 5%), -1px 1px 18px -15px rgb(77 179 75 / 45%), 0 14px 20px 0px rgb(226 255 226 / 60%);
 
@@ -298,10 +302,6 @@ h1, h2, h3, h4,h5,h6, ul, li, p{
 
 
 
-.content-container{
-  //margin: 4px;
-  background: var(--color-white-bg);
-}
 .content-header{
   border-bottom: 1px solid rgba(192, 192, 192, 0.41);
   padding: 10px 0px;
@@ -420,6 +420,11 @@ table td {
   user-select: none;
 }
 
+.heading-1{@apply dark:text-white font-bold text-4xl}
+.heading-2{@apply dark:text-white font-bold text-2xl}
+.heading-3{@apply dark:text-white font-bold text-xl}
+.heading-4{@apply dark:text-white font-bold text-4xl}
+.heading-5{@apply dark:text-white font-bold text-4xl}
 
 
 /******* dashboard sidebar **************/
