fetch brand dynamically for individual category

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -423,8 +423,8 @@ table td {
 .heading-1{@apply dark:text-white font-bold text-4xl}
 .heading-2{@apply dark:text-white font-bold text-2xl}
 .heading-3{@apply dark:text-white font-bold text-xl}
-.heading-4{@apply dark:text-white font-bold text-4xl}
-.heading-5{@apply dark:text-white font-bold text-4xl}
+.heading-4{@apply dark:text-white font-bold text-lg}
+.heading-5{@apply dark:text-white font-bold text-sm}
 
 
 /******* dashboard sidebar **************/
