added mobile toggle sidebar on product filter page

--- a/client/src/pages/homePage/HomePage.scss
+++ b/client/src/pages/homePage/HomePage.scss
@@ -15,6 +15,17 @@
 }
 
 
+.homepage_slider{
+   @include get_down(600px){
+       img{
+           min-height: 250px;
+           object-fit: cover;
+       }
+   }
+
+}
+
+
 .product-detail-link{
   text-decoration: none;
   display: block;
