added seller dashboard site for /seller route

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,7 +3,8 @@
 @import "styles/--breakpoint";
 
 :root{
-  --header-height: 97px
+  --header-height: 97px;
+    font-family: Roboto, serif;
 }
 
 html{
