--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,11 +4,21 @@
 
 :root{
   --header-height: 97px;
-    font-family: Roboto, serif;
+    font-family: 'Inter', sans-serif;
 }
 
 html{
   -webkit-tap-highlight-color: transparent;
+}
+
+.li-item{
+    @apply hover:text-green-450 hover:bg-green-450/10 px-4 py-2 rounded-md select-none;
+    &:hover li{ @apply text-green-450 }
+    &-focus{
+        @apply text-green-450 bg-green-450/10;
+        li{ @apply text-green-450 }
+    }
+
 }
 
 .dark{
@@ -20,7 +30,6 @@ html{
 body{
   //background: #f0f3f8;
   background: #f9fff9;
-  font-family: Roboto, serif !important;
   font-weight: 300;
   font-size: 14px;
   color: #212121;
@@ -430,6 +439,7 @@ table td {
 .heading-3{@apply dark:text-white font-bold text-xl}
 .heading-4{@apply dark:text-white font-bold text-lg}
 .heading-5{@apply dark:text-white font-bold text-sm}
+.heading-6{@apply dark:text-white font-bold text-xs}
 
 
 /******* dashboard sidebar **************/
