--- a/client/src/pages/SellerHub/components/selllerSidebar/sellerSideBar.scss
+++ b/client/src/pages/SellerHub/components/selllerSidebar/sellerSideBar.scss
@@ -2,10 +2,16 @@
 
 .seller-sidebar{
     .sidebar{
-        @include get_down(1000px){
+        @include get_down(1100px){
+            transition: all .4s ease;
             left: -100% !important;
+            position: fixed;
+            left: -100%;
+            z-index: 301;
+            top: 0px;
         }
     }
+
     .sidebar-mobile_show{
         left: 0 !important;
     }
