added chart in admin dashboard

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -28,8 +28,8 @@ html{
 }
 body{
   //background: #f0f3f8;
-  //background: #f9fff9;
-  background: #ebfaf059;
+  background: #f8f8f8;
+  //background: #ebfaf059;
   font-weight: 300;
   font-size: 14px;
   color: #212121;
