--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,7 +3,7 @@
 @import "styles/--breakpoint";
 
 :root{
-  --header-height: 97px;
+  //--header-height: 97px;
     font-family: 'Inter', sans-serif;
 }
 
@@ -85,6 +85,7 @@ body{
 
 .container{
     @apply px-3 md:px-4 mx-auto;
+    //max-width: 1400px !important;
 }
 
 
@@ -222,11 +223,7 @@ i:hover{
   color: var(--gray-9);
 }
 
-.h1{@apply dark:text-white text-neutral-900 font-medium text-3xl}
-.h2{@apply dark:text-white text-neutral-900 font-medium text-xl}
-.h3{@apply dark:text-white text-neutral-900 font-medium text-lg}
-.h4{@apply dark:text-white text-neutral-900 font-medium text-sm}
-.p{@apply dark:text-neutral-200 text-neutral-500  }
+
 
 .text-grey{color: #7d7d7d}
 .text-primary{color: var(--color-primary);}
@@ -359,7 +356,7 @@ table td {
 .heading-4{@apply dark:text-white font-bold text-lg}
 .heading-5{@apply dark:text-white font-bold text-sm}
 .heading-6{@apply dark:text-white font-bold text-xs}
-
+.p{@apply dark:text-neutral-200 text-neutral-500  }
 
 /******* dashboard sidebar **************/
 .dashboard-container {
