--- a/client/src/pages/AdminDashboard/Dashboard.scss
+++ b/client/src/pages/AdminDashboard/Dashboard.scss
@@ -1,4 +1,11 @@
 
+.admin-navigation{
+    min-height: 60px;
+    display: flex;
+    align-items: center;
+    z-index: 1000;
+}
+
 .sidebar-row{
   display: flex;
   /* background: red; */
@@ -30,4 +37,8 @@
 
 .recharts-bar-rectangle path{
     width: 10px !important;
+}
+
+.header-height{
+    height: var(--header-height);
 }
