--- a/client/src/components/UI/Modal/Modal.scss
+++ b/client/src/components/UI/Modal/Modal.scss
@@ -1,45 +1,90 @@
-
-.modal{
-  //background: white;
-  //box-shadow: 0 2px 30px 3px #343434d4;
-  position: fixed;
-  top: 10vh;
-  left: 50%;
-  z-index: 1003;
-  transform: translateX(-50%);
-  width: max-content;
-  padding: 10px;
-  overflow-y: auto;
-  /* height: 80vh  */;
-}
-.modal-close_icon{
-  margin-left: 10px;
-  position: absolute;
-  top: 0;
-  right: 15px;
+.modal {
+    position: fixed;
+    top: 10vh;
+    left: 50%;
+    z-index: 1003;
+    transform: translateX(-50%);
+    width: max-content;
+    padding: 10px;
+    overflow-y: auto;
 }
 
-.my-modal{
-  color: red !important;
-   transition: all 1s ease;
-  &-enter {
-    opacity: 0;
-    transform: translateY(300px);
-   transition: all 1s ease;
-  }
-  &-enter-active {
-    opacity: 1;
-     transform: translateY(0px);
+.my-modal {
+    color: red !important;
     transition: all 1s ease;
-  }
-  &-exit {
-    opacity: 1;
-    transform: translateY(0px);
-       transition: all 1s ease;
-  }
-  &-exit-active {
-      opacity: 0;
-      transition: all 1s ease;
-  }
-    
+
+    &-enter {
+        opacity: 0;
+        transform: translateY(300px);
+        transition: all 1s ease;
+    }
+
+    &-enter-active {
+        opacity: 1;
+        transform: translateY(0px);
+        transition: all 1s ease;
+    }
+
+    &-exit {
+        opacity: 1;
+        transform: translateY(0px);
+        transition: all 1s ease;
+    }
+
+    &-exit-active {
+        opacity: 0;
+        transition: all 1s ease;
+    }
+}
+
+.modal-backdrop {
+    cursor: pointer;
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    background: rgba(51, 51, 51, 0.86);
+    position: fixed;
+    z-index: 100000000000;
+
+    &__close {
+        display: none;
+    }
+
+    .modal {
+        cursor: default;
+        width: 500px;
+        background: white;
+        z-index: 100;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        box-shadow: 0 4px 16px -4px #0e0e0e;
+        border-radius: 10px;
+        padding: 10px;
+        box-sizing: border-box;
+        max-height: calc(100vh - 210px); // can be change via component
+        overflow-y: auto;
+
+        &::-webkit-scrollbar{
+            width: 4px;
+        }
+        &::-webkit-scrollbar-track{
+            background-color: transparent;
+
+        }
+        &::-webkit-scrollbar-thumb{
+            border-radius: 30px;
+            background-color: rgba(30, 143, 30, 0.34);
+
+        }
+        &::-webkit-scrollbar-button {
+            background-color: transparent;
+            border-radius: 100px;
+            opacity: 0;
+        }
+
+    }
+
 }
