completed login with google server + client redirection with token way

--- a/client/src/pages/PublicSite/auth/style.scss
+++ b/client/src/pages/PublicSite/auth/style.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/--breakpoint";
 
 .auth-card-container{
-  @apply max-w-8xl mx-auto px-4 h-screen;
+  @apply max-w-md mx-auto my-2 mb-20 md:my-24;
   @include get_down(500px){
     //width: 400px;
     padding: 0;
@@ -11,10 +11,12 @@
 }
 
 .auth-card{
-  @apply shadow-card-deep dark:shadow-card-deep-dark  mx-auto bg-white dark:bg-neutral-800 p-5 rounded-2xl absolute top-1/3 left-1/2 transform -translate-x-1/2 -translate-y-1/2 ;
-  width: 100%;
-  max-width: 420px;
+  @apply shadow-card-deep dark:shadow-card-deep-dark mx-auto bg-white dark:bg-neutral-800 p-5 rounded-2xl ;
+  //width: 100%;
+  //max-width: 420px;
   @include get_down(500px){
+      @apply shadow-none;
+      background: transparent;
     max-width: 100%;
     height: 100%;
     position: static!important;
@@ -36,5 +38,5 @@
 }
 
 .input-group{
-  @apply bg-neutral-100 dark:bg-neutral-900/50 text-neutral-800  dark:text-neutral-300 placeholder:text-neutral-800  dark:placeholder:text-neutral-400  rounded-lg border border-transparent focus:border focus:border-green-400 py-3 px-4;
+  @apply bg-neutral-200/50 dark:bg-neutral-900/50 text-neutral-800  dark:text-neutral-300 placeholder:text-neutral-800  dark:placeholder:text-neutral-400  rounded-lg border border-transparent focus:border focus:border-green-400 py-3 px-4;
 }
