--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -96,31 +96,14 @@ img{ font-size: 12px}
 }
 
 
-.App-Content{
-  position: relative;
-  &-mask {
-    opacity: 0;
-    position: fixed;
-    z-index: 1000;
-    overflow: hidden;
-    transition: all .5s ease;
-    &.mask__open {
-      width: 100%;
-      //background: rgba(196, 79, 185, 0.96);
-      background: #10101063;
-      height: 100vh;
-      opacity: 1;
-    }
-    &.mask__close {
-      opacity: 0;
-    }
-  }
+.App{
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
-
-
-.bg-primary{background: $primary;}
-.bg-secondary{background: $secondary;}
-.bg-danger{background: $danger;}
+.app-content{
+    flex-grow: 1;
+}
 
 .right{
   margin-left: auto !important; 
@@ -143,18 +126,6 @@ img{ font-size: 12px}
   position:  absolute;
   right: 0;
   top: 0;
-}
-
-.console_root{
-  /* width: 100%; */
-  background: #e7e7e7;
-   position: fixed;
-   top: 20vh;
-   height: 300px;
-   overflow: auto;
-   box-shadow: 0 3px 10px 2px grey;
-   margin: 20px;
-   box-sizing: border-box;
 }
 
 table{
@@ -224,14 +195,6 @@ i:hover{
 }
 
 
-
-.text-grey{color: #7d7d7d}
-.text-primary{color: var(--color-primary);}
-.bg-primary{background: var(--color-primary);}
-.bg-transparent{background: transparent !important; color: black !important}
-
-
-
 .content-header{
   border-bottom: 1px solid rgba(192, 192, 192, 0.41);
   padding: 10px 0px;
@@ -288,60 +251,10 @@ table td {
   margin: 0;
 }
 
-.backdrop{
-  pointer-events: none;
-  visibility: hidden;
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  opacity: 0;
-  z-index: 99;
-  background-color: rgba(38, 38, 38, 0.88);
-  transition-duration: .2s;
-  transition-timing-function: cubic-bezier(.4,0,.2,1);
-  transition-property: transform, opacity;
-  overflow-y: hidden;
-  overscroll-behavior: contain;
-  &--show{
-    opacity: 1;
-    visibility: visible;
-    overflow: auto;
-    .modal-box{
-      pointer-events: auto;
-    }
-  }
-}
 .dark{
   .modal-box{
     background-color: #262626;
   }
-}
-.modal-box{
-    max-height: calc(100vh - 5em);
-    --tw-bg-opacity: 1;
-    background-color: white;
-    padding: 1.5rem;
-    transition-property: color,background-color,border-color,fill,stroke,opacity,box-shadow,transform,filter,-webkit-text-decoration-color,-webkit-backdrop-filter;
-    transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
-    transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter,-webkit-text-decoration-color,-webkit-backdrop-filter;
-    transition-duration: .2s;
-    transition-timing-function: cubic-bezier(.4,0,.2,1);
-    width: 91.666667%;
-    max-width: 32rem;
-    --tw-scale-x: .9;
-    --tw-scale-y: .9;
-    transform: translate(var(--tw-translate-x),var(--tw-translate-y)) rotate(var(--tw-rotate)) skew(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-    border-top-left-radius: var(--rounded-box,1rem);
-    border-top-right-radius: var(--rounded-box,1rem);
-    border-bottom-left-radius: var(--rounded-box,1rem);
-    border-bottom-right-radius: var(--rounded-box,1rem);
-    box-shadow: 0 25px 50px -12px #00000040;
-    overflow-y: auto;
-    overscroll-behavior: contain;
 }
 
 .block-page{
@@ -369,41 +282,6 @@ table td {
     max-width: 1400px;
     margin: auto;
   }
-
-  //.sidebar {
-  //  color: #2f2f2f;
-  //  position: sticky;
-  //  top: var(--header-height);
-  //  bottom: 0;
-  //  height: 100%;
-  //  transition: width .3s ease;
-  //  box-shadow: 2px 0 9px -3px #2c2c2ca1;
-  //
-  //  @include get_down(800px) {
-  //    position: relative;
-  //    top: auto;
-  //    .sidebar_content {
-  //      overflow: visible;
-  //      height: 100%;
-  //      //width: 300px;
-  //      //overflow-y: auto;
-  //      //height: calc(100vh - var(--header-height));
-  //    }
-  //  }
-  //
-  //  &.inline-mode {
-  //    .sidebar_content {
-  //      width: 60px;
-  //    }
-  //  }
-  //
-  //  &_content {
-  //    width: 300px;
-  //    overflow-y: auto;
-  //    height: calc(100vh - var(--header-height));
-  //  }
-  //}
-
 
   .content {
 
