added customer login error handle and show login stataus and pending

--- a/client/src/components/UI/Loader/loader.scss
+++ b/client/src/components/UI/Loader/loader.scss
@@ -41,6 +41,18 @@
         }
     }
 
+    &.small {
+        span {
+            display: inline-block;
+            vertical-align: middle;
+            width: 1em;
+            height: 1em;
+            margin: .19em;
+            border-radius: .5em;
+        }
+    }
+
+
 }
 
 .loader-root .loading-title {
