--- a/client/src/components/ModalWithBackdrop/styles.scss
+++ b/client/src/components/ModalWithBackdrop/styles.scss
@@ -1,32 +1,32 @@
-
-.modal-backdrop{
-    cursor: pointer;
-    width: 100%;
-    height: 100vh;
-    left: 0;
-    top: 0;
-    background: rgba(51, 51, 51, 0.86);
-    position: fixed;
-    z-index: 100000000000;
-
-    &__close{
-        display: none;
-    }
-
-    .modal{
-        cursor: default;
-        width: 500px;
-        //height: 400px;
-        background: white;
-        z-index: 100;
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        box-shadow: 0 4px 16px -4px #0e0e0e;
-        border-radius: 10px;
-        padding: 10px;
-        box-sizing: border-box;
-    }
-
-}
+//
+//.modal-backdrop{
+//    cursor: pointer;
+//    width: 100%;
+//    height: 100vh;
+//    left: 0;
+//    top: 0;
+//    background: rgba(51, 51, 51, 0.86);
+//    position: fixed;
+//    z-index: 100000000000;
+//
+//    &__close{
+//        display: none;
+//    }
+//
+//    .modal{
+//        cursor: default;
+//        width: 500px;
+//        //height: 400px;
+//        background: white;
+//        z-index: 100;
+//        position: absolute;
+//        top: 40%;
+//        left: 50%;
+//        transform: translate(-50%, -50%);
+//        box-shadow: 0 4px 16px -4px #0e0e0e;
+//        border-radius: 10px;
+//        padding: 10px;
+//        box-sizing: border-box;
+//    }
+//
+//}
