completed update brand & and brand for admin user

--- a/client/src/components/UI/Form/multiSelect/styles.scss
+++ b/client/src/components/UI/Form/multiSelect/styles.scss
@@ -1,5 +1,6 @@
 .option-list{
     max-height: 200px;
+    min-height: 200px;
     background-color: white;
     overflow-y: auto;
     box-shadow: 0 6px 9px -1px #6a6a6a;
