set correct position for dropdown panel based on mouse x postion of dropdown parent element

--- a/src/pages/publicSite/homePage/HomeCategoryNav/style.scss
+++ b/src/pages/publicSite/homePage/HomeCategoryNav/style.scss
@@ -4,6 +4,8 @@
     padding: 20px 10px;
     transition: all .4s ease-in;
     top: 100%;
+    //left: 50%;
+    transform: translateX(-50%);
     justify-content: space-between;
     background: white;
     display: flex;
