--- a/src/components/UI/Backdrop/Backdrop.scss
+++ b/src/components/UI/Backdrop/Backdrop.scss
@@ -7,14 +7,6 @@
     z-index: 1003;
     cursor: pointer;
 
-    &.open {
-        display: block
-    }
-
-    &.close {
-        display: none;
-    }
-
     &.contentMask {
         width: 100%;
         height: 100vh;
@@ -33,4 +25,27 @@
 
 .bg-transparent {
     background: transparent;
+}
+
+
+
+.backdrop-base {
+    &-enter {
+        opacity: 0;
+    }
+
+    &-enter-active {
+        opacity: 1;
+        transition: opacity 300ms;
+    }
+
+    &-exit {
+        opacity: 1;
+    }
+
+    &-exit-active {
+        opacity: 0;
+        transition: opacity 500ms;
+    }
+
 }
