--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 @import "styles/--breakpoint";
 
 :root{
-  //--header-height: 97px;
+    --header-height: 100px;
     font-family: 'Inter', sans-serif;
 }
 
