--- a/src/components/categoryNavbar/CategoryNavbar.scss
+++ b/src/components/categoryNavbar/CategoryNavbar.scss
@@ -1,16 +1,19 @@
 
 
 .category_navigation{
-  
+  position: relative;
+    z-index: 999;
   background: white;
   margin-bottom: 10px;
   box-shadow: 0 1px 8px 0 rgb(0 0 0 / 6%);
+
   .category_main_nav{
     display: flex;
     justify-content: center;
+      position: relative;
     &--item{
       padding: 15px 10px;
-      position: relative;
+      //position: relative;
       li{
         font-size: 14px;
         font-weight: 500;
@@ -26,17 +29,28 @@
   }
 }
 
-
+.category_submenu_popup{
+    @apply absolute rounded-lg;
+    //padding: 20px 10px;
+    position: absolute;
+    left: 50%;
+    top:  40px;
+    z-index: 1000;
+    transform: translateX(-50%);
+    justify-content: space-between;
+    background: white;
+    display: flex;
+}
 .category_submenu{
   display: flex;
-  position: fixed;
-  z-index: 100;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 90px;
-  background: white;
+  //position: absolute;
+  //z-index: 100;
+  //left: 50%;
+  //transform: translateX(-50%);
+  //top: 100%;
+  //background: white;
   padding: 0px 0px;
-  box-shadow: 0px 2px 8px -2px #929292;
+  //box-shadow: 0px 2px 8px -2px #929292;
   &--each_column{
     min-width: 200px;
     padding: 5px 10px;
