--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -2,7 +2,7 @@
 
 
 :root{
-    --sidebar-width: 350px;
+    --sidebar-width: 300px;
     --sidebar-width-mobile: 250px
 }
 
@@ -12,20 +12,33 @@
         width: 100%;
         height: 110%;
         background: rgba(101, 101, 101, 0.53);
-        position: fixed;
+        position: sticky;
         left: 0;
-        top: 0;
+        top: 100px;
         z-index: 300;
         display: block;
     }
-    .sidebar {
-        width: var(--sidebar-width);
-        height: 110%;
-        overflow-y: auto;
-        transition: all .4s ease;
-        @apply shadow-card rounded-lg bg-white;
 
-        &::-webkit-scrollbar {
+    .sidebar {
+        --sidebar-width: 260px;
+        //max-height: 700px;
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        min-height: 100vh;
+        position: sticky;
+        top: var(--header-height);
+        width: var(--sidebar-width);
+        min-width: var(--sidebar-width);
+        max-width: var(--sidebar-width);
+        transition: left .3s ease;
+        background: white;
+        left: -260px;
+        z-index: 998;
+        overflow-y: auto;
+        max-height: calc(100vh - var(--header-height));
+
+    &::-webkit-scrollbar {
             height: 1px;
             width: 3px;
         }
