--- a/src/pages/publicSite/homePage/HomeCategoryNav/style.scss
+++ b/src/pages/publicSite/homePage/HomeCategoryNav/style.scss
@@ -7,6 +7,7 @@
     justify-content: space-between;
     background: white;
     display: flex;
+    flex-direction: column;
 
     &__submenu-panel{
         position: relative;
