--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -9,11 +9,9 @@
   color: white;
   display: flex;
   align-items: center;
-  width: max-content;
+    justify-content: center;
   text-decoration: none !important;
   -webkit-tap-highlight-color: transparent;
-
-  //@apply bg-green-450;
 
   a{
     color: inherit;
@@ -35,16 +33,11 @@
   margin-right: 0;
 }
 
-.btn-primary{
-  background: var(--primary);
+.btn-primary{;
+  @apply bg-green-500 hover:bg-green-600;
   color: white;
   &:hover{
-    background: var(--color-primary);
     box-shadow: 0 2px 5px 0px grey;
-  }
-  &:focus{
-    background: var(--color-primary);
-    box-shadow: 0 2px 10px 0px #47474787;
   }
 }
 
